--- a/named_entity_recognition.ipynb
+++ b/named_entity_recognition.ipynb
@@ -89,7 +89,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Problem\n",
+        "## Problem 2\n",
         "- Extract all the birth dates of cricketers in the given Text"
       ],
       "metadata": {
